--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="userAgentTask.js"></script>
+  <script src="./userAgentTask.js"></script>
 
 
   <!-- include spec files here... -->
-  <script src="spec/.js"></script>
+  <script src="spec/userAgentTaskSpec.js"></script>
  
 </head>
 
